Generate test results list

--- a/lib/templates/test.ejs
+++ b/lib/templates/test.ejs
@@ -82,7 +82,7 @@
   </head>
 
   <body>
-    <head>
+    <header>
       <nav>
         UX Speed test report generated using
         <a href="https://github.com/cloudflare/telescope">Telescope v1.0.0</a>
@@ -95,7 +95,7 @@
         </div>
         <div class="shadow"></div>
       </section>
-    </head>
+    </header>
     <main>
       <section>
         <p>
