Fixed frame ordering, added time labels.

--- a/lib/templates/test.ejs
+++ b/lib/templates/test.ejs
@@ -63,9 +63,19 @@
         padding: 1em 2em 1em 1em;
         grid-area: 1/1;
         width: 100%;
+        color: silver;
+      }
+      .filmstrip .frame {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+      }
+      .filmstrip .sec {
+        font-size: smaller;
       }
       .filmstrip img {
         height: 8em;
+        border: 1px solid grey;
       }
       .filmstrip .shadow {
         width: 2em;
@@ -89,8 +99,11 @@
       </nav>
       <section class="filmstrip">
         <div class="container">
-          <% for (let frame of resultAssets.filmstripFiles) { %>
-          <img src="<%= frame %>" />
+          <% for (let frame of resultAssets.filmstrip) { %>
+          <div class="frame">
+            <span class="sec"><%= frame.ms / 1000 %>s</span>
+            <img src="<%= frame.filename %>" />
+          </div>
           <% } %>
         </div>
         <div class="shadow"></div>
